[gd_scene load_steps=9 format=2]

[ext_resource path="res://Environment/Water.gd" type="Script" id=1]
[ext_resource path="res://SurfaceDebris.tscn" type="PackedScene" id=2]
[ext_resource path="res://Environment/BouyanceArea.gd" type="Script" id=3]
[ext_resource path="res://Environment/SpawnPosition.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]

extents = Vector2( 913.443, 272 )

[sub_resource type="RectangleShape2D" id=2]

extents = Vector2( 913.72, 45.2042 )

[sub_resource type="RectangleShape2D" id=3]

extents = Vector2( 915.391, 183.83 )

[sub_resource type="RectangleShape2D" id=4]

extents = Vector2( 919.287, 70 )

[node name="Water" type="Area2D"]
position = Vector2( 512, 848 )
input_pickable = false
gravity_distance_scale = 0.349
gravity = 0.2
linear_damp = 100.0
angular_damp = 30.0
script = ExtResource( 1 )

[node name="SurfaceDebris" parent="." instance=ExtResource( 2 )]
max_debris_items = 15

[node name="Polygon2D" type="Polygon2D" parent="."]
position = Vector2( 0, 80 )
polygon = PoolVector2Array( 768, -352, -768, -352, -768, 192, 768, 192 )
color = Color( 0, 0.541176, 0.698039, 0.627451 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
one_way_collision = true

[node name="KinematicArea" type="Area2D" parent="."]
position = Vector2( 1.67017, -81.2981 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicArea"]
shape = SubResource( 2 )

[node name="KillArea" type="Area2D" parent="."]
position = Vector2( 0, 147.518 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillArea"]
shape = SubResource( 3 )

[node name="InstakillArea" type="Area2D" parent="KillArea"]

[node name="CollisionShape2D3" type="CollisionShape2D" parent="KillArea/InstakillArea"]
position = Vector2( -1096.74, -605.836 )
rotation = 1.57079
shape = SubResource( 3 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="KillArea/InstakillArea"]
position = Vector2( 1096.74, -617.524 )
rotation = 1.57079
shape = SubResource( 3 )

[node name="BouyanceArea" type="Area2D" parent="."]
position = Vector2( 0, -88 )
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BouyanceArea"]
position = Vector2( 0, -111.903 )
shape = SubResource( 4 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -405.856 )
current = true

[node name="RightSpawn" type="Position2D" parent="."]
position = Vector2( 666.405, -302.304 )
script = ExtResource( 4 )
direction = Vector2( -1, 0 )

[node name="LeftSpawn" type="Position2D" parent="."]
position = Vector2( -604.608, -317.336 )
script = ExtResource( 4 )
direction = Vector2( 1, 0 )

[connection signal="body_entered" from="KinematicArea" to="." method="_on_KinematicArea_body_entered"]
[connection signal="body_exited" from="KinematicArea" to="." method="_on_KinematicArea_body_exited"]
[connection signal="body_entered" from="KillArea/InstakillArea" to="." method="_on_InstakillArea_body_entered"]
[connection signal="body_entered" from="BouyanceArea" to="BouyanceArea" method="_on_BouyanceArea_body_entered"]
[connection signal="body_exited" from="BouyanceArea" to="BouyanceArea" method="_on_BouyanceArea_body_exited"]
